Post, Comment, PostLike and CommentLike implemented